# Capstone-Project-Intelligent-Trade-Finance

./: .env.example  .gitignore  Makefile  README.md  demo.py  pyproject.toml  requirements-llm.txt  requirements.txt
app/: __init__.py  config.py  pipeline.py
app/agents/: __init__.py  agent_a_intake.py  agent_b_extraction.py  agent_c_ucp.py  agent_d_matching.py  agent_e_sanctions.py  agent_h_orchestrator.py
app/audit/: __init__.py  audit_logger.py  decision_logger.py  tracer.py
app/data/sanctions/: adverse_media.csv  eu_consolidated.csv  ofac_sdn.csv  un_consolidated.csv
app/data/synthetic/: defaults.json
app/llm/: __init__.py  client.py  extractor.py  narrator.py  semantic_judge.py
app/parsing/: __init__.py  classifier.py  extraction_router.py  field_extraction.py  ocr_parser.py  pdf_parser.py  quality_scorer.py
app/reports/: __init__.py  render.py  report_builder.py
app/reports/templates/: audit_log.md.j2  discrepancies.md.j2  run_report.md.j2
app/rules/: __init__.py  matching_rules.py  sanctions_lists.py  ucp600.py
app/schemas/: __init__.py  common.py  context.py  decision.py  extraction.py  findings.py  matching.py  sanctions.py  ucp.py
app/tools/: __init__.py  calculator_tool.py  evidence_tool.py  fuzzy_match_tool.py  policy_loader.py
app/ui/: __init__.py  streamlit_app.py
app/utils/: dates.py  ids.py  io.py  state.py
config/: policy_pack.yaml
config/regional/: eu_policy.yaml  us_policy.yaml
samples/: make_sample_bundle.py
tests/: test_determinism.py  test_extraction_router.py  test_field_extraction.py  test_tools.py
