[project]
name = "intelligent-trade-finance"
version = "0.1.0"
description = "Multi-agent documentary-credit examination and settlement-routing pipeline"
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
